--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A Lot To Swap swap website for people to swap homegrown/homemade products in Oxford, England">
+    <meta name="keywords" content="A Lot To Swap, swap, oxford, england, allotment, homemade, homegrown">
+
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>A Lot To Swap</title>
 </head>
 <body>
-    
+    <h1>Let's swap!</h1>
 </body>
 </html>
