add core structure to main home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <title>A Lot To Swap</title>
 </head>
 <body>
-    <h1>Let's swap!</h1>
+    <header>Header content</header>
+    <section>Image</section>
+    <section>Why we do it</section>
+    <section>Locations</section>
+    <footer>Contact & Social Media</footer>
 </body>
 </html>
