--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A Lot To Swap swap website for people to swap homegrown/homemade products in Oxford, England">
+    <meta name="description"
+        content="A Lot To Swap swap website for people to swap homegrown/homemade products in Oxford, England">
     <meta name="keywords" content="A Lot To Swap, swap, oxford, england, allotment, homemade, homegrown">
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>A Lot To Swap</title>
 </head>
+
 <body>
-    <header>Header content</header>
+    <header>
+        <a href="index.html">
+            <h1>A Lot To Swap</h1>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Pictures</a></li>
+                <li><a href="#">Join Us</a></li>
+            </ul>
+        </nav>
+    </header>
     <section>Image</section>
     <section>Why we do it</section>
     <section>Locations</section>
     <footer>Contact & Social Media</footer>
 </body>
+
 </html>
