add style and font family to title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>A Lot To Swap</h1>
+            <h1 id="title">A Lot To Swap</h1>
         </a>
         <nav>
             <ul>
