--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <a href="index.html">
             <h1 id="title">A Lot To Swap</h1>
         </a>
-        <nav>
+        <nav id="menu">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Pictures</a></li>
                 <li><a href="#">Join Us</a></li>
+                <li><a href="#">Pictures</a></li>
+                <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
     </header>
