add placement and pseudo class to menu items

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
             <ul>
                 <li><a href="#">Join Us</a></li>
                 <li><a href="#">Pictures</a></li>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
             </ul>
         </nav>
     </header>
-    <section>Image</section>
+    <section>
+        <div></div>
+    </section>
     <section>Why we do it</section>
     <section>Locations</section>
     <footer>Contact & Social Media</footer>
