add header logo and animation to hero

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 <body>
     <header>
+        <div class="header-logo"></div>
+        <a href="index.html"><img src="assets/images/Alot to swap.jpg" alt="site-logo" /></a>
         <a href="index.html">
             <h1 id="title">A Lot To Swap</h1>
         </a>
@@ -26,8 +28,8 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <div></div>
+    <section id="hero-outer">
+        <div id="hero"></div>
     </section>
     <section>Why we do it</section>
     <section>Locations</section>
