add and then take away icons in nav bar

--- a/index.html
+++ b/index.html
@@ -30,10 +30,17 @@
     </header>
     <section id="hero-outer">
         <div id="hero"></div>
+        <div id="text-overlay">
+            <h2>A Lot To Swap</h2>
+            <h3>Produce swapping community based in Oxfordshire</h3>
+        </div>
     </section>
     <section>Why we do it</section>
     <section>Locations</section>
     <footer>Contact & Social Media</footer>
+
+    <script src="https://kit.fontawesome.com/a282a6e1ac.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
