add philosophy structure

--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
     <section id="hero-outer">
         <div id="hero"></div>
         <div id="text-overlay">
-            <h2> A Lot To Swap</h2>
-            <h3>Produce swapping community based in Oxfordshire</h3>
+            <h2>A Lot To Swap</h2>
+            <h3>A produce swapping community based in Oxfordshire</h3>
         </div>
     </section>
-    <section>Why we do it</section>
+    <section id="philosophy">
+        <h1>Why should you get involved?</h1>
+        <div id="left-list">Left-List</div>
+        <div id="image">Image</div>
+    </section>
     <section>Locations</section>
     <footer>Contact & Social Media</footer>
 
