add philosopy text

--- a/index.html
+++ b/index.html
@@ -37,7 +37,28 @@
     </section>
     <section id="philosophy">
         <h1>Why should you get involved?</h1>
-        <div id="left-list">Left-List</div>
+        <div id="left-list">
+            <div class="left-list-title">
+                <h2><i class="fas fa-dumpster"></i> Reduce Waste</h2>
+                <p>Swap excess you have grown or produced, reducing the amount of food wasted.</p>
+            </div>
+            <div class="left-list-title">
+                <h2><i class="fas fa-users"></i> Build a Community</h2>
+                <p>Meet new and likeminded people with shared interests, through a positive cause.</p>
+            </div>
+            <div class="left-list-title">
+                <h2><i class="fas fa-pound-sign"></i> Save Money</h2>
+                <p>Swapping saves money as you can trade with people rather than buy from new.</p>
+            </div>
+            <div class="left-list-title">
+                <h2><i class="far fa-lightbulb"></i> Share Ideas</h2>
+                <p>Share growing and cooking tips within the community.</p>
+            </div>
+            <div class="left-list-title">
+                <h2><i class="fas fa-recycle"></i> Cut Down Plastic Use</h2>
+                <p>Swapping homegrown reduces the need for excess packaging.</p>
+            </div>
+        </div>
         <div id="image">Image</div>
     </section>
     <section>Locations</section>
