--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id="hero"></div>
         <div id="text-overlay">
             <h2>A Lot To Swap</h2>
-            <h3>A produce swapping community based in Oxfordshire</h3>
+            <h3>A produce swapping community based in Oxford</h3>
         </div>
     </section>
     <section id="philosophy">
@@ -44,7 +44,7 @@
             </div>
             <div class="left-list-title">
                 <h2><i class="fas fa-users"></i> Build a Community</h2>
-                <p>Meet new and likeminded people with shared interests, through a positive cause.</p>
+                <p>Meet new and likeminded people at our scheduled "Swap Shop Sundays".</p>
             </div>
             <div class="left-list-title">
                 <h2><i class="fas fa-pound-sign"></i> Save Money</h2>
@@ -60,7 +60,10 @@
             </div>
         </div>
     </section>
-    <section>Locations</section>
+    <section id="locations">
+        <h1>Where can I swap?</h1>
+        
+    </section>
     <footer>Contact & Social Media</footer>
 
     <script src="https://kit.fontawesome.com/a282a6e1ac.js" crossorigin="anonymous"></script>
