add swap meet locations

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h1>Why should you get involved?</h1>
         <div id="left-list">
             <div class="left-list-title">
-                <h2><i class="fas fa-dumpster"></i> Reduce Waste</h2>
+                <h2><i class="fas fa-trash"></i> Reduce Waste</h2>
                 <p>Swap excess you have grown or produced, reducing the amount of food wasted.</p>
             </div>
             <div class="left-list-title">
@@ -62,7 +62,29 @@
     </section>
     <section id="locations">
         <h1>Where can I swap?</h1>
-        
+        <div class="meets">
+        <h2>Barracks Lane OX4 <i class="fas fa-exchange-alt"></i></h2>
+        <h3>Saturday 5/12</h3>
+        <h3>9am-11am</h3>
+        <h3>barrackslaneallotments@gmail.com</h3>
+        </div>
+        <div class="meets">
+            <h2>Cowmead OX1 <i class="fas fa-exchange-alt"></i></h2>
+            <h3>Sunday 6/12</h3>
+            <h3>2pm-4pm</h3>
+            </div>
+            <div class="meets">
+                <h2>Mill Lane OX3 <i class="fas fa-exchange-alt"></i></h2>
+                <h3>Saturday 12/12</h3>
+                <h3>9am-11am</h3>
+                <h3>christine.mitchell@lang.ox.ac.uk</h3>
+                </div>
+                <div class="meets">
+                    <h2>Upper Wolvercote OX2 <i class="fas fa-exchange-alt"></i></h2>
+                    <h3>Sunday 13/12</h3>
+                    <h3>2pm-4pm</h3>
+                    <h3>http://upperwolvercoteallotments.blogspot.com/</h3>
+                    </div>
     </section>
     <footer>Contact & Social Media</footer>
 
