add footer content and icons

--- a/index.html
+++ b/index.html
@@ -85,7 +85,22 @@
                     <h3>2pm-4pm</h3>
                     </div>
     </section>
-    <footer>Contact & Social Media</footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook (opens in new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit us on Twitter (opens in new tab)"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit us on Instagram (opens in new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit us on YouTube (opens in new tab)"><i class="fab fa-youtube"></i></a>
+            </li>
+        </ul>
+    </footer>
 
     <script src="https://kit.fontawesome.com/a282a6e1ac.js" crossorigin="anonymous"></script>
 
