add styling and spacing to footer

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </div>
     </section>
     <footer>
-        <ul>
+        <ul class="socials">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook (opens in new tab)"><i class="fab fa-facebook"></i></a>
             </li>
