--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav id="menu">
             <ul>
                 <li><a href="#">Join Us</a></li>
-                <li><a href="#">Pictures</a></li>
+                <li><a href="gallery.html">Pictures</a></li>
                 <li><a href="index.html" class="active">Home</a></li>
             </ul>
         </nav>
