--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </a>
         <nav id="menu">
             <ul>
-                <li><a href="#">Join Us</a></li>
+                <li><a href="form.html">Join Us</a></li>
                 <li><a href="gallery.html">Pictures</a></li>
                 <li><a href="index.html" class="active">Home</a></li>
             </ul>
