--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,6 @@
 <body>
     <header>
         <div class="header-logo"></div>
-        <a href="index.html"><img src="assets/images/Alot to swap.jpg" alt="site-logo" /></a>
         <a href="index.html">
             <h1 id="title">A Lot To Swap</h1>
         </a>
@@ -38,21 +37,23 @@
         <img src="assets/images/veg2.jpeg" alt="vegetables laid out on a market stall">
         <img src="assets/images/2people1.jpeg" alt="2 people on an allotment">
         <img src="assets/images/veg1.jpeg" alt="different vegetables laid out on a table">
+        <img src="assets/images/honey.jpeg" alt="honey dripping from a piece of honeycomb">
+        <img src="assets/images/plums.jpeg" alt="plums for swap">
     </section>
     
     <footer>
         <ul class="socials">
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook (opens in new tab)"><i class="fab fa-facebook"></i></a>
+                <a class="icons" href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook (opens in new tab)"><i class="fab fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit us on Twitter (opens in new tab)"><i class="fab fa-twitter"></i></a>
+                <a class="icons" href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit us on Twitter (opens in new tab)"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit us on Instagram (opens in new tab)"><i class="fab fa-instagram"></i></a>
+                <a class="icons" href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit us on Instagram (opens in new tab)"><i class="fab fa-instagram"></i></a>
             </li>
             <li>
-                <a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit us on YouTube (opens in new tab)"><i class="fab fa-youtube"></i></a>
+                <a class="icons" href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit us on YouTube (opens in new tab)"><i class="fab fa-youtube"></i></a>
             </li>
         </ul>
     </footer>
