--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <body>
     <header>
         <div class="header-logo"></div>
-        <a href="index.html"><img src="assets/images/Alot to swap.jpg" alt="site-logo" /></a>
         <a href="index.html">
             <h1 id="title">A Lot To Swap</h1>
         </a>
@@ -88,16 +87,16 @@
     <footer>
         <ul class="socials">
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook (opens in new tab)"><i class="fab fa-facebook"></i></a>
+                <a class="icons" href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook (opens in new tab)"><i class="fab fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit us on Twitter (opens in new tab)"><i class="fab fa-twitter"></i></a>
+                <a class="icons" href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit us on Twitter (opens in new tab)"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit us on Instagram (opens in new tab)"><i class="fab fa-instagram"></i></a>
+                <a class="icons" href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit us on Instagram (opens in new tab)"><i class="fab fa-instagram"></i></a>
             </li>
             <li>
-                <a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit us on YouTube (opens in new tab)"><i class="fab fa-youtube"></i></a>
+                <a class="icons" href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit us on YouTube (opens in new tab)"><i class="fab fa-youtube"></i></a>
             </li>
         </ul>
     </footer>
