add media query for meetups section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <div class="header-logo"></div>
         <a href="index.html">
             <h1 id="title">A Lot To Swap</h1>
