--- a/form.html
+++ b/form.html
@@ -27,44 +27,48 @@
             </ul>
         </nav>
     </header>
-<section id="form-background">
-    <form class="signup-form" method="post" action="https://alottoswap.com>
+    <section id="form-background">
+        <form class="signup-form" method="post" action="https://alottoswap.com>
         <h2>Let's get you signed up!</h2>
-        <label for="fname">First Name</label>
-        <input class="text-input" id="fname" type="text" name="first_name" required>
-        <label for="lname">Last Name</label>
-        <input class="text-input" id="lname" type="text" name="last_name" required>
-        <label for="location">Location</label>
-        <input class="text-input" id="location" type="text" name="location" required>
-        <label for="email">Email Address</label>
-        <input class="text-input" id="email" type="email" name="email_address" required>
-        <label for="vegetables">Vegetables</label>
-        <input id="vegetables" type="radio" name="item_to_swap" value="vegetables" required>
-        <label for="fruit">Fruit</label>
-        <input id="fruit" type="radio" name="item_to_swap" value="fruit">
-        <label for="flowers">Flowers</label>
-        <input id="flowers" type="radio" name="item_to_swap" value="flowers">
-        <label for="preseves">Preserves</label>
-        <input id="preserves" type="radio" name="item_to_swap" value="preserves">
-        <label for="all">All</label>
-        <input id="all" type="radio" name="item_to_swap" value="all">
-        <input class= "join-button" id="submit" type="submit" value="Let's Get Swapping!!">
-    </form>
+        <label for=" fname">First Name</label>
+            <input class="text-input" id="fname" type="text" name="first_name" required>
+            <label for="lname">Last Name</label>
+            <input class="text-input" id="lname" type="text" name="last_name" required>
+            <label for="location">Location</label>
+            <input class="text-input" id="location" type="text" name="location" required>
+            <label for="email">Email Address</label>
+            <input class="text-input" id="email" type="email" name="email_address" required>
+            <label for="vegetables">Vegetables</label>
+            <input id="vegetables" type="radio" name="item_to_swap" value="vegetables" required>
+            <label for="fruit">Fruit</label>
+            <input id="fruit" type="radio" name="item_to_swap" value="fruit">
+            <label for="flowers">Flowers</label>
+            <input id="flowers" type="radio" name="item_to_swap" value="flowers">
+            <label for="preseves">Preserves</label>
+            <input id="preserves" type="radio" name="item_to_swap" value="preserves">
+            <label for="all">All</label>
+            <input id="all" type="radio" name="item_to_swap" value="all">
+            <input class="join-button" id="submit" type="submit" value="Let's Get Swapping!!">
+        </form>
     </section>
 
     <footer>
         <ul class="socials">
             <li>
-                <a class="icons" href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook (opens in new tab)"><i class="fab fa-facebook"></i></a>
+                <a class="icons" href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Facebook (opens in new tab)"><i class="fab fa-facebook"></i></a>
             </li>
             <li>
-                <a class="icons" href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit us on Twitter (opens in new tab)"><i class="fab fa-twitter"></i></a>
+                <a class="icons" href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Twitter (opens in new tab)"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
-                <a class="icons" href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit us on Instagram (opens in new tab)"><i class="fab fa-instagram"></i></a>
+                <a class="icons" href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Instagram (opens in new tab)"><i class="fab fa-instagram"></i></a>
             </li>
             <li>
-                <a class="icons" href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit us on YouTube (opens in new tab)"><i class="fab fa-youtube"></i></a>
+                <a class="icons" href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on YouTube (opens in new tab)"><i class="fab fa-youtube"></i></a>
             </li>
         </ul>
     </footer>
