--- a/gallery.html
+++ b/gallery.html
@@ -40,20 +40,24 @@
         <img src="assets/images/honey.jpeg" alt="honey dripping from a piece of honeycomb">
         <img src="assets/images/plums.jpeg" alt="plums for swap">
     </section>
-    
+
     <footer>
         <ul class="socials">
             <li>
-                <a class="icons" href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook (opens in new tab)"><i class="fab fa-facebook"></i></a>
+                <a class="icons" href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Facebook (opens in new tab)"><i class="fab fa-facebook"></i></a>
             </li>
             <li>
-                <a class="icons" href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit us on Twitter (opens in new tab)"><i class="fab fa-twitter"></i></a>
+                <a class="icons" href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Twitter (opens in new tab)"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
-                <a class="icons" href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit us on Instagram (opens in new tab)"><i class="fab fa-instagram"></i></a>
+                <a class="icons" href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Instagram (opens in new tab)"><i class="fab fa-instagram"></i></a>
             </li>
             <li>
-                <a class="icons" href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit us on YouTube (opens in new tab)"><i class="fab fa-youtube"></i></a>
+                <a class="icons" href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on YouTube (opens in new tab)"><i class="fab fa-youtube"></i></a>
             </li>
         </ul>
     </footer>
