--- a/index.html
+++ b/index.html
@@ -62,41 +62,45 @@
     <section id="locations">
         <h1>Where can I swap?</h1>
         <div class="meets">
-        <h2>Barracks Lane OX4 <i class="fas fa-exchange-alt"></i></h2>
-        <h3>Saturday 4/12</h3>
-        <h3>9am-11am</h3>
-        <h3>barrackslaneallotments@gmail.com</h3>
+            <h2>Barracks Lane OX4 <i class="fas fa-exchange-alt"></i></h2>
+            <h3>Saturday 4/12</h3>
+            <h3>9am-11am</h3>
+            <h3>barrackslaneallotments@gmail.com</h3>
         </div>
         <div class="meets">
             <h2>Cowmead OX1 <i class="fas fa-exchange-alt"></i></h2>
             <h3>Sunday 5/12</h3>
             <h3>2pm-4pm</h3>
-            </div>
-            <div class="meets">
-                <h2>Mill Lane OX3 <i class="fas fa-exchange-alt"></i></h2>
-                <h3>Saturday 11/12</h3>
-                <h3>9am-11am</h3>
-                <h3>christine.mitchell@lang.ox.ac.uk</h3>
-                </div>
-                <div class="meets">
-                    <h2>Upper Wolvercote OX2 <i class="fas fa-exchange-alt"></i></h2>
-                    <h3>Sunday 12/12</h3>
-                    <h3>2pm-4pm</h3>
-                    </div>
+        </div>
+        <div class="meets">
+            <h2>Mill Lane OX3 <i class="fas fa-exchange-alt"></i></h2>
+            <h3>Saturday 11/12</h3>
+            <h3>9am-11am</h3>
+            <h3>christine.mitchell@lang.ox.ac.uk</h3>
+        </div>
+        <div class="meets">
+            <h2>Upper Wolvercote OX2 <i class="fas fa-exchange-alt"></i></h2>
+            <h3>Sunday 12/12</h3>
+            <h3>2pm-4pm</h3>
+        </div>
     </section>
     <footer>
         <ul class="socials">
             <li>
-                <a class="icons" href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook (opens in new tab)"><i class="fab fa-facebook"></i></a>
+                <a class="icons" href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Facebook (opens in new tab)"><i class="fab fa-facebook"></i></a>
             </li>
             <li>
-                <a class="icons" href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit us on Twitter (opens in new tab)"><i class="fab fa-twitter"></i></a>
+                <a class="icons" href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Twitter (opens in new tab)"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
-                <a class="icons" href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit us on Instagram (opens in new tab)"><i class="fab fa-instagram"></i></a>
+                <a class="icons" href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Instagram (opens in new tab)"><i class="fab fa-instagram"></i></a>
             </li>
             <li>
-                <a class="icons" href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit us on YouTube (opens in new tab)"><i class="fab fa-youtube"></i></a>
+                <a class="icons" href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on YouTube (opens in new tab)"><i class="fab fa-youtube"></i></a>
             </li>
         </ul>
     </footer>
