add media query for form sized to mobile

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="left-list-title">
                 <h2><i class="fas fa-users"></i> Build a Community</h2>
-                <p>Meet new and likeminded people at our scheduled "Swap Shop Sundays".</p>
+                <p>Meet new and likeminded people at our scheduled local "Swap Meets".</p>
             </div>
             <div class="left-list-title">
                 <h2><i class="fas fa-pound-sign"></i> Save Money</h2>
