fix broken html

--- a/form.html
+++ b/form.html
@@ -28,9 +28,8 @@
         </nav>
     </header>
     <section id="form-background">
-        <form class="signup-form" method="post" action="https://alottoswap.com>
-        <h2>Let's get you signed up!</h2>
-        <label for=" fname">First Name</label>
+        <form class="signup-form" method="post">
+            <label for="fname">First Name</label>
             <input class="text-input" id="fname" type="text" name="first_name" required>
             <label for="lname">Last Name</label>
             <input class="text-input" id="lname" type="text" name="last_name" required>
@@ -44,7 +43,7 @@
             <input id="fruit" type="radio" name="item_to_swap" value="fruit">
             <label for="flowers">Flowers</label>
             <input id="flowers" type="radio" name="item_to_swap" value="flowers">
-            <label for="preseves">Preserves</label>
+            <label for="preserves">Preserves</label>
             <input id="preserves" type="radio" name="item_to_swap" value="preserves">
             <label for="all">All</label>
             <input id="all" type="radio" name="item_to_swap" value="all">
