add comments to code

--- a/form.html
+++ b/form.html
@@ -27,6 +27,9 @@
             </ul>
         </nav>
     </header>
+
+    <!--Join Us form code borrowed from CI Love Running project and modified-->
+
     <section id="form-background">
         <form class="signup-form" method="post">
             <label for="fname">First Name</label>
@@ -50,6 +53,8 @@
             <input class="join-button" id="submit" type="submit" value="Let's Get Swapping!!">
         </form>
     </section>
+
+    <!--Footer code borrowed from CI Love Running project and modified-->
 
     <footer>
         <ul class="socials">
