--- a/gallery.html
+++ b/gallery.html
@@ -28,6 +28,8 @@
         </nav>
     </header>
 
+    <!--Picture Gallery-->
+
     <section id="pictures">
         <img src="assets/images/jam.jpeg" alt="jars of jam">
         <img src="assets/images/apples.jpeg" alt="a bucket of apples">
@@ -40,6 +42,8 @@
         <img src="assets/images/honey.jpeg" alt="honey dripping from a piece of honeycomb">
         <img src="assets/images/plums.jpeg" alt="plums for swap">
     </section>
+
+    <!--Footer code borrowed from CI Love Running project and modified-->
 
     <footer>
         <ul class="socials">
