--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             </ul>
         </nav>
     </header>
+
+    <!--Main Image-->
+
     <section id="hero-outer">
         <div id="hero"></div>
         <div id="text-overlay">
@@ -34,6 +37,9 @@
             <h3>A produce swapping community based in Oxford</h3>
         </div>
     </section>
+
+    <!--Philosophy/Site Ethos-->
+
     <section id="philosophy">
         <h1>Why should you get involved?</h1>
         <div id="left-list">
@@ -59,6 +65,9 @@
             </div>
         </div>
     </section>
+
+    <!--Locations of Swap Meets-->
+
     <section id="locations">
         <h1>Where can I swap?</h1>
         <div class="meets">
@@ -84,6 +93,9 @@
             <h3>2pm-4pm</h3>
         </div>
     </section>
+
+    <!--Footer code borrowed from CI Love Running project and modified-->
+
     <footer>
         <ul class="socials">
             <li>
